chore: update name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-stitches",
+  "name": "@atom-learning/jest-stitches",
   "version": "1.0.4",
   "homepage": "https://github.com/jaredLunde/jest-stitches#readme",
   "repository": "github:jaredLunde/jest-stitches",
